# cargo-cubemx

./: .gitignore  Cargo.toml  LICENSE  README.md  memory.x  out.rs
cargo-cubemx/: Cargo.toml  flc_presentation_notes.md  grammar.txt  out.rs
cargo-cubemx-test/: Cargo.toml
cargo-cubemx-test/.cargo/: config.toml
cargo-cubemx-test/src/: ioc_compiled.rs  main.rs
cargo-cubemx/src/: main.rs  test.ioc
cargo-cubemx/src/codegen/: f4.rs  mod.rs
cargo-cubemx/src/parser/: ioc_grammar.pest  mod.rs
cargo-cubemx/src/structure/: dma.rs  mod.rs  rcc.rs  signal.rs
flc_presentation/: flc_presentation_notes.md
src/: main.rs  test.ioc
src/codegen/: f4.rs  result_design.md
src/parser/: comp_storage.rs  ioc_grammar.pest  mod.rs
src/structure/: dma.rs  mcu.rs  mod.rs  rcc.rs  signal.rs
src/structures/: mod.rs
